# FastAPI-Kafka

./: DockerFile  pyproject.toml
app/: server.py
app/api/: __init__.py  health_check_routes.py  user_routes.py
app/core/config/: enums.py  settings.py
app/core/db/: postgresql.py
app/core/messaging/kafka/: consumer.py  producer.py
app/core/messaging/kafka/handler/: abstract_handler.py  factory_handler.py  user_event_handler.py
app/models/: users.py
app/repository/: user_repository.py
app/schemas/: health_check.py  users.py
app/services/: user_service.py
app/utils/: logger.py
