[tool.poetry]
name = "fastapi-kafka"
version = "0.0.1"
description = "FastAPI and Apache-Kafka"
authors = ["Narayan Prajapat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
confluent-kafka = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
